# chatboti

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PLAN-SUMMARY.md  README.md  STORAGE-EVOLUTION.md  TRACE_FINDINGS.md  benchmark_loading.py  build_rag.py  memory-efficiency-analysis.md  metadata.json  pyproject.toml  reload_microeval.sh  test_search.py
.beads/: issues.jsonl
chatboti/: __init__.py  agent.py  cli.py  config.py  docker.py  document.py  embed_client.py  faiss_rag.py  generic_rag.py  hdf5_rag.py  index.html  llm.py  loaders.py  mcp_server.py  models.json  rag.py  rag_cli.py  server.py  utils.py
chatboti/data/: embeddings-nomic-embed-text.h5  embeddings-nomic-embed-text.json  metadata-amazon-titan-embed-text-v2-0.json  metadata-nomic-embed-text.json  metadata-text-embedding-3-small.json  vectors-amazon-titan-embed-text-v2-0.faiss  vectors-nomic-embed-text.faiss  vectors-text-embedding-3-small.faiss
debug/: DEBUG_BEDROCK_REPRO_README.md  README.md  debug_bedrock_repro.py
docs/: environment-loading.md  error_handling_strategy.md  generic-document-storage-spec.md  single-file-rag-backend-spec.md
docs/analysis/: embedding-storage-architecture.md  faiss-vs-numpy-size-comparison.md
docs/archive/: MULTI-MODEL-SUPPORT.md  STORAGE-EVOLUTION.md  faiss-multiple-documents-spec.md  metadata-storage-design.md  vector-storage-comparison.md
summary-evals/: models.json
summary-evals/results/: summarize-groq-llama.yaml  summarize-ollama-llama3.yaml  summarize-openai-gpt-4o.yaml
summary-evals/runs/: summarize-bedrock-nova.yaml  summarize-groq-llama.yaml  summarize-ollama-llama3.yaml  summarize-openai-gpt-4o.yaml
tests/: conftest.py  sample_speakers.csv  test_bedrock_batching.py  test_document.py  test_e2e_integration.py  test_embed_client.py  test_embedding_storage.py  test_faiss_rag.py  test_generic_rag.py  test_hdf5_rag.py  test_loaders.py  test_ollama_tool_usage.py  test_search_integration.py  test_search_results.py  test_tool_usage.py
tinyrag/: agent.py  cli.py  fastapi_server.py  mcp_client.py  mcp_server.py  rag.py  run_docker.py  server.py
